@@ -1,3 +1,7 @@
+2003-01-21  Timo Schulz  <twoaday@freakmail.de>
+
+	* gcrypt.h (gcry_random_add_bytes): New.
+	
 2003-01-20  Simon Josefsson  <jas@extundo.com>
 
 	* gcrypt.h (gcry_md_algos): Add GCRY_MD_CRC32,
